Added SP6LogicDemoBlueprint code generator that replaces all logic method bodies with not implemented exceptions

--- a/SPPaginatedGridControl/MainForm.resx
+++ b/SPPaginatedGridControl/MainForm.resx
@@ -155,6 +155,52 @@
         hXxdHZVJ76P30K8XCrXy4/l/htvR8S8YMmphz+wc6wAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="bbiTestEndpoint.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAABalJREFUeF7tnMtvG1UYxUN4VLwfbYUgUQU7HqtK0ITEjhewZAOhiA1/QAOLgqAV
+        sChvREBABIgV7JAgpW3IjE2jLKog0ccGRIkSj6s2TZsFiMcKxGMzfNc5eJL4JJl77cTmzveTflLVZI7n
+        Ho/vPHLlDkVRFEVRFKVtiQ909ldKvbkoeD5XCQ7lo3Ba/C1fCf6pav4t/yc//yIfBc/lorDHbIOtFVcK
+        lVK3lPpGvhIuiLGNst3FXCV8vTcKuhCnpOX+mcNb5Sj+SIr8e2Wxtsob8Zd8Kj7snT56E+KVtZDCHpMj
+        9xdWZiNK5s8DZ8JH8TLKSgrHjl2Go54W2CzlHPKBeS28rGLovTB6pUwTAStsQ4zCcfOaePlsszsevVRK
+        OVxX0kYrb7h+EoTNmHZWU84L72M3sok54bJiNlM5JzyC3ckW5rLQXJmwUjZTc8VlLnuxW9mhlVPPSjM3
+        FZk7XBl4wzdZzdLcrGXqjlkGbB4v0DJa6GvYPc+JD3TK9HOBFNBqF8wlMfbSX8xTTTL49jAKdmE3/UWO
+        /hfo4NtAORnvx276S/V5Phm8jYtTWHGwb3bsWmN/FDyUrwRl9rtWRuFB7Ka/mD+c0MGn1JTPHi1X7yui
+        4CLbJq1ycJxGnL/IkforG3x6i4OIqiN3JtzNt0mnuTFElL/IQBu6/jdTDqLq2FUpXce2Sau5H0CUv7CB
+        24gYygNnJ69n26RVpqDfEeUvbOA2IoZipie2TVplCjqHKH9hA7cRMXUsnoTDCtsmrfIGnEKcv7CB24iY
+        GovzfnGw0fKN8gZ8hlh/YQO3ETE1OktPxJcf3RtfNflsvP3rV+LbTo3EO09/Kr8b1G27nnIO2INYf2ED
+        txExCcU9MXPLxFPxjhPvxD0zh2gOs1AevwOp/sIGbiNiEkj5SzWfkK7jw/F95SM07z/l6J/riONLkOov
+        bPA2IiaBlM4009Rd335MM6tG4TNI9Bs6eAsRk0DKXt2huOubYXPDtTw3Cv/IzMq5ZQN3EDEJtOi13Tr1
+        YtwfjSe5Ufgm0vxnaZkuIiaBFJzGbVMvmeLF4HxhevQapPkPK9VGxCSQctPaffwtOfkWH0RSNmCl2oiY
+        BFJsWrtPvK1vgK2ISSDFplGnIEcRk0DKXc/tUy/LkZ+chOUeYBhp/rO0TBcRk0AKXt2hxXmfXIZmZnXc
+        soE7iJgEWnS9V0zsje/+7hOaaZRPwT4k+g0bvI2ISSBlL7X6KEJuvvrKYzSvppwL9FFEChGTQEo3bpl4
+        Ot5x8l2rh3EDUXgnUv2FDdxGxNToLD1ZnV6untxXfRx9+8mReOcP5nE0334tc5VwCLH+wgZuI2JqNHNd
+        kJycP0esv7CB24iYOpqzLkj/JLmuiKE0vi4omEOUv7CB24gYSsPrgnRZyvr2nP3yZkTV0fC6IF2Ytb4y
+        zTyOqDqasC4oE0sT6eAtXCiUx7chrkZz1gVlYnEuH7yNZoW0+d4HM+c3c11QPhPL09nA28RMPA9iA28X
+        +2aL92A3/YUNvC2MwvlMfMsWHXxbGLyKXfQbPvjWaq7/+2bHbsUu+g0roPUGI9g9/+EFtNAo+Ck3H96I
+        3fMfWkILHYjCh7Fr2YCV0Crl5u097FZ2YEW0xKx+ZRktY5OVq56xzH5pHytkcw1GMvGtKKvBS9l4Zb7/
+        MXMnXAYrZyOV6eZPc9QX5o7cgF3INqykDTEK583jhfzMV7fgpRUDLcvGKDxo/nAi5Zov/TDfOyFW//39
+        4s/C/QPl8Xv16+tXoVako4hRXGGl2ogYxRVWqo2IUVxhpdqIGMUVVqqNiFFcYaXaiBjFFVaqjYhRXGGl
+        2ogYxRVWqo2IUVxhpdqIGMUVVqqNiFFcYaXaiBjFFVaqjYhRXGGl2ogYxRVWqo2IUVxhpdqIGMUVVqqN
+        iFFcYaXaiBhFURRFURRFUZT/KR0d/wKqIyyOR47j/QAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="barButtonItem1.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJkSURBVHhe7ZmxjRwxEAQ3DQWjjJSCovpghI/hbNknpww+
+        0dDgDaJJThdQFrlAs6wD7gkhhBBCCCGEEMJ3+Pn5eneWDD7UqE6SwYca1Uky+FCjOkkGH2pUJ8ngQ43q
+        JBl8zIN+v/5+8bvnp0kGH/OgKnB1fppk8DEPqgJX56dJBh/zoCpwdX6aZPChRnWSDD7UqE6SwYca1Uky
+        +FCjOkkGH2pUJ8ngQ43qJBn24deP9/tmeea+qNE3yTP3RY2+SZ65L2r0TfLMfVGjb5Jn7osafZM8cx/U
+        T7NOksGHGtVJMvhQozpJBh9qVCfJ4EON6iQZfKhRnSSDj3lQ9ZdjdX6aZPAxD6oCV+enSQYf86AqcHV+
+        mmTwMQ+qAlfnp0kGH2pUJ8ngQ43qJBl8qFGdJIMPNaqTZPChRnWSDD7UqE6SYR/Unxg3yTP3RY2+SZ65
+        L2r0TfLMfVGjb5Jn7osafZM8c1/U6Jvkmfugfpp1kgw+1KhOksGHGtVJMvhQozpJBh9qVCfJ4EON6iQZ
+        fMyDqr8cq/PTJIOPeVAVuDo/TTL4mAdVgavz0ySDj3lQFbg6P00y+FCjVvp8/Pmv6puVksGHGrVSFX1U
+        fbNSMvhQo1aqoo+qb1ZKBh9q1EpV9FH1zUrJ4EONWqmKPqq+WSkZfKhRK1XRR9U3KyVDH9SfJKNcC6tQ
+        0Ue5Flahoo9yLaxCRR/lWliFij7KtbAKFX2Ua2EVKvoo18IqVPRRroUKFc8ps/qgIjhlVh9UBKfM6oOK
+        4JRZfVARnDKrDyqCU2b1QUVwyqw+qAhOmRVCCCGEEEIIIYSFPM8/t3Aa4ylSQx8AAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="MainForm.IconOptions.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIACqNQAAZgAAAICAAAABACAAKAgBABA2AABAQAAAAQAgAChCAAA4PgEAMDAAAAEA
