--- a/SPPaginatedGridControl/MainForm.resx
+++ b/SPPaginatedGridControl/MainForm.resx
@@ -18,7 +18,7 @@
     <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
     <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing"">Blue</data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
         <value>[base64 mime encoded serialized .NET Framework object]</value>
     </data>
@@ -158,7 +158,7 @@
   <data name="bbiTestEndpoint.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAABalJREFUeF7tnMtvG1UYxUN4VLwfbYUgUQU7HqtK0ITEjhewZAOhiA1/QAOLgqAV
+        DgAACw4BQL7hQQAABalJREFUeF7tnMtvG1UYxUN4VLwfbYUgUQU7HqtK0ITEjhewZAOhiA1/QAOLgqAV
         sChvREBABIgV7JAgpW3IjE2jLKog0ccGRIkSj6s2TZsFiMcKxGMzfNc5eJL4JJl77cTmzveTflLVZI7n
         Ho/vPHLlDkVRFEVRFKVtiQ909ldKvbkoeD5XCQ7lo3Ba/C1fCf6pav4t/yc//yIfBc/lorDHbIOtFVcK
         lVK3lPpGvhIuiLGNst3FXCV8vTcKuhCnpOX+mcNb5Sj+SIr8e2Wxtsob8Zd8Kj7snT56E+KVtZDCHpMj
@@ -183,6 +183,38 @@
         4s/C/QPl8Xv16+tXoVako4hRXGGl2ogYxRVWqo2IUVxhpdqIGMUVVqqNiFFcYaXaiBjFFVaqjYhRXGGl
         2ogYxRVWqo2IUVxhpdqIGMUVVqqNiFFcYaXaiBjFFVaqjYhRXGGl2ogYxRVWqo2IUVxhpdqIGMUVVqqN
         iFFcYaXaiBhFURRFURRFUZT/KR0d/wKqIyyOR47j/QAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bbiEncryptPassword.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAYISURBVHhe7ZvNbxtFGMYn9AAScIFjw0ehlAo4c6NO2xOc
+        iSPEHaGKFvUv4Ab3ChTJOSCBIGRtp5yAK1RQhBBIfBypENwgKU2IIPTA8M76CbV3n7XH6xk3rz0/6adY
+        9juz+7z74V07NolEIpFIJBIJLdj1Zx6wWaNjs6Xd3PbSps1OP46XEzHJm99ubEvT7aDyXLexiLJELPI9
+        v9T8/81QlogFTjms+WJjB2WJWPDG3xJliViwpveLskQsWNP7RVkiFqzp/aIsEQvW9H5RlogFa3q/KJtv
+        bKdxUi4XLw/cqa6fPYGXJ6LY8KIomwh3Vz2w/vljJXfaaP4fpea457IzT6OsNqV5C6KsNm4d6fq3l66r
+        2Aj53lJeedi4MelGkPmH3YjdQFkt8ua7daRz526i9PAyvEHOyTaCzLFZnhNmjQ7Kxsaj+aKCO223knzl
+        +62/EfLzc9WHcZ1Tj6FsLPya75zsCJsKsqLVe+iAE2yEbmNR5shkDtnYovuALnrzxQmOsKnhrnYq3sSI
+        9TdCCMZrvmSquZGnztjBAl2ijgMuNVXsKLUY89DuYtjUkOVGP1Xedvw3wvSvLkZfrTkVN/8Av40w/auL
+        0RtgBpp/wMiNcOhOQTPU/APyjVB1i+/xJmwzc8y2zcvie/L4G3FLHt/MdY/dc+41V7NuHsawSvKrNbfs
+        4vq4dZy15h/Qu0RtdGUPO7h+7w5rvn3N3CENbYpXpMH/yl9pkoeuNjOfyeNlNwemK9G7qXNHwuT3EzOH
+        7ZjT0sAfBxpbx8x8LzYwbWIU9m1zlzTsTdrMuvaOnkv2I3MnFpNg2E1zvzTraqmBoczM5+J9WFyiHzT/
+        B9q4kPZOSWkj9ONODdKUeHt+UXckpNPRLaQpb5WaFN9LWPx8I1c7p2SP9L/EDKVbplxpYTXmE1znT36p
+        Wd/vht0nzDzSAHeTxRpTbe9N9FV5/KR9x9yd6x6759xrbMwwM/M8Vmf+kAZcKTWk2n+kWeeG39maI+Ir
+        eS2fo2xmPsXww8vAL1KKn50U7dWM/MWKBD8m+p77XfPPYOhIpP5sPobPNWjvveAhDKXEyO9N9S9SRjn8
+        FysS3n2wJnUeyp6PYd7ImPN0LmZmXsKwErHye5NveboALyt/sSLB3SeXUjPC3jn/CIZ548aIfjd2mXkX
+        w0rEyu+N12FXafU3XRL821IjuBcwZGxk7MXCXFV+jSElYuX3ZsIVqPymS/Y693m+1IwwM09gyNjYrnmK
+        zln2NwwpESu/NzKR55fXRDl8MU0JCe37JnkPhoyN/dDcS+csmpl9DCkhOaLk96b6P9FGKWOGfLlBG0FE
+        eW3YnEyUl4iVfywG/xONLaxfv2+WWBOYKK8Nm5OJckqM/Lcd1gQmymvD5mSifH5gTWCivDZsTibK5wfW
+        BCbKa8PmZKJ8fmBNYKK8NmxOJsrnB9YEJsprw+Zkonx+YE1gorw2bE4mymeMF1uLC8219sJKa3dhZc3q
+        Uta52eqaF1aV/qOWa/5Ka5uH02Rr2yyvHkUqPfT2fBZIpRuIpQedp51KD/+P84qQEKpFLD2wEJpFLD2w
+        EJpFLD2wEJpFLD2wEJpFLD2wEJpFLD2wEJpFLD2wEJpFLD2wEKF88Nz7tvPlNbv7183cy1/9bE9ezGht
+        KBFLDyxECF3zt//ct0Wu7+3nr7ExIUQsPbAQIXR7fhXZ1Wt0TAgRSw8sRAjdKaeKHXmNjQkhYumBhQih
+        O9VU4U5NbEwIEUsPLEQI20NOQRtf/ETHhBCx9MBChPD4hQ27tVs+Cn7f/ds+ev4DOiaEiKUHFiKUj0ij
+        i7jnWG0oEUsPLERIi7CakCKWHliIkBZhNSFFLD2wECEtwmpCilh6YCFCWoTVhBSx9MBChPTX7T203tpf
+        tvZoTUgRSw8sREife+OTvPHOZ1//mNaEFLH0wEJoFrH0wEJoFrH0wEJoFrH0wEJoFrH0wEJoFrH0wEJo
+        FrH0sNBs7bAgSlX4z7nNVpcE0WlzrY1YilhpnVhYaW3RQKp0P9BYO45UylhePSohNlSejtw6uz1fbfMT
+        iUQikUgkDi/G/Ad73QjZHl31MAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="MainForm.IconOptions.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
