Added Redis cache and scaled the app to run in 3 instances

--- a/SPPaginatedGridControl/MainForm.resx
+++ b/SPPaginatedGridControl/MainForm.resx
@@ -217,6 +217,67 @@
         CNkeXfUwAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="bbiDebug.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAy/SURBVHhe7V0LkBTVFV0gSmJijBorfhI1yi4G8IuJGhOJ
+        zOyysrPrryZszywQtntHUBE/iZ+o2fgpQYUAArK9SxILmMXMzBJLd2ZBYmlMYkjExKRMJWWVFVEpEz8R
+        NRp0hcm5vXeW192v54uy092n6tQOc1/3ve/c1/e9/kxT48OHDx8+fPjw4aNchBOJA5szyfdC6eQ/Q5nk
+        Y82Z1Gr8vaZlIBVseeihg7lZ1aGpP35oUyY1PTSQ+gH61NOcTj2Jv6+A27jJyMBFWzYejqCyMoYyqY+a
+        08ln8XllUyYRvXig7yjebMShMdP35aZ0YhYGkh5Kp55D7Lut/SHSQONNRgYuHPjl8bJAZaROgVsxmm6a
+        3p86jnex33BRZuOJGCC3IrZt+LvHGq+MSMAbvPnIQNMjfZNkgRaiMcLSqV81DySV2Db9AN7dxw4umW3w
+        /USxootE3B/wrkYOqF5O70+c1jKQDKNTP8QhvAGdfFHWAQdub0mnFtRvXvtZ3uU+B81HEP06xPeyxL8D
+        k8+jL+vw94amTN/FGCwTP84Y9zmQlCOb+5MXYlJeTHVV3sm9xOG9g+pwTTY7indRMTo7O0dj3ypi+JfV
+        n42YrxDnIvwNhR6Of5F34R7QfMGrij/bOi8ynfpDSyYxgTcrG1wet9n2LxAl5WmIfi1NwryZN9CSSZ5O
+        Kw5awsqEQRL+R2WJm5cMOpKc953cBdvapk19p3Jz78IoU1im0uRmEwpEktZg4hzDzQuC2mJEPyDbFwmP
+        UrSsMZM4gpv7yKGpP3UCxN4iFS6TfLCYlZKxwkknk7J9QPgBKoHc1IcUmHxDA4nLZKUDo7qXW8lB22ZS
+        v5Bs9y7+qvtyYnc9Qpm+r8tWLfnmBGOJaWkPvtrUn5jMTXyUgubNia+iJL0kCorR/GHTpsQ3uMkwcNSc
+        QzaxLbh9JJxtVzXo5I5LyN4kZJK/ZfMwMPqfMrXBNv4KZx8BYkZEcYcETl7AZoifDNntqRls9rEvgFH/
+        a5PIGPFsgi211WJ7nE0+8qG+ra3oayot6eSZJpGJmxLjLkhvrLN+HxroO4M3K4hgJHYyf/QW6iNqOBjR
+        Xgu0qo38VUGgrJivJaVTVzZn+q4Wv0Obv3DzgqhvjZ2FGD4KKuojjVHNG5chgjNjx9ZHtDSYNahoLzZG
+        o59nc16g1t+GJWV20qp7sofeND87+vJZg2OumDV42C0Lsqd2LaF5ga7rdHLzvJgye/an4ftvQhxvBSNq
+        hM3uBY344U4zMQp1NufFmT2rLjnkxiuyNfPapKREnLdOb+HmeRFUtLutcTREVG9M3BB8naXzewqWovnz
+        x466YuZzMuFFjrly9h9rwuG8141ypUeMgcoQm92PwMyZh6PD/xYFqFfUV1AWvsBN7JjbdpVMcAfO4a1s
+        aGycPxal5jmT74i6c+qsy47hJt5AfavaZhbBKEVdbLZjbnSrRGgnPslb2YBE/9jmV1EdE+ZqoPMDJiFQ
+        FqaEL/8cm82Y2/auRGgHRt/hrWxAAv5q8qlom/G1Ny/SQfCHRTFQCl7H13IxpELnoQPgY5Pok2Jgk7cg
+        Ww1ReWCzHTKR89EBgdb2060TcENEC7HZG6CJECPxeVEEOh8IxWIHcRM7ZCLnYx5gEl5l8h3RXqDzAja7
+        H7KJsOAolImcj3nQFJl3qHUVhqOiqBO4qsf5kfbj0Pn3xM6DA2x2hkzkfCyAhmh7uzkG9f1AZM4JbHYv
+        6IRH7DjKwa6gclktm50hEzkfC2MU/D9ljsXlEzJKT7PYYe6046E/LrN87InxrnPG9XbPPWJxZ/aYlQuz
+        X+m6N3v8mmXZmrtvNpG+Ixu1oba0jbEt9sG7s8FTE/LZ4Ws+gw6+IHZWNvGO711zdF1v99W1cf3xunj3
+        LnzOymhNgKyNQezD2Bf2SftmN8OwTciFFgPVCtnES0cEm2tOSOiH1PbqayDWBzYRJSw6AQJp3+SDfLHb
+        msbwnCNsc1K+5XC1wrrqYD5NkyGNOAizTSaaE8tJQI7ki6798KDYYYmJzo7fpiOWQ3cH0Kl3rB0dpqK9
+        VbdeH5SJ5cRKEjB+bRfqvjoojcWg+q7rzgtQay9B52yjLccJP1spFcuJlSRgwk9XSGNg7qiPahdz2O7C
+        5FjsgKFEqJtQknaLHZ/YtUwqlhMrScAk+BJ9D8WCmBAbxcjhuhtUg7EEvAF1eDuJcMqKxVKxnFhJAk65
+        b3FO/Fch/CJPnIA5IRwOjwlEOoKnrFzyskwsJ1aSgJOX34MFgRr2zGgvBnW9ui4Ty4mVJAB0vvHjVeCE
+        6S6JUI6sKAHwxW595DA+ri+QiuXAShKA84Cr2K2PHMbF9UtlYjmxogSs77mE3frIAaPyLJlYTqwoAfEe
+        2+PtnkdtYvUxMrGcWEkCJuj6sezWu6Dl57RWbWJA0WYFFW15IKL9rm69XDAZy04AfOD848N6eixR0dYG
+        lY4FQSX2LbpNyqG5G3S9HWecW7EOfz93JppjKZcjyk2A02UIJOXNgNJxKYfpTgxditDelAlAPPn+n0hF
+        k7HcBJAPmW8iXQUt5ZH5qkMwqp0t63iOp9+7UCqajOUm4NQli6z3o02ks3IO131A2bne3GF1EKPu2aCi
+        rsGRMXdi17IumWgylpuAurh+a0NYPay+VZuKAXE14viTGBPiuJ3DdR/QwX6xs0jATWwyULehZ4ZUNAnL
+        TkBv93fZnQEkX7PE9ASb3AVa9dCNF7GzAaX9HDYbqF3ffZpEMCnLTUDtg6tNv5xsUGIniTFhgbDLlQ9p
+        TYvGzjB1VFHfQ1IOZLOBox7WD4JIu62iyVhWAuL6HvLB7nIYhVhMt0unRbVvs8094Ho73Ekc6pvYZAJE
+        ekkqnoXlJaB7O7sxAQnYKMaGf9/MJvcA5adP7KS1/ucAobbYhJOwvAToj7IbExDbtWJsKEOPsckdMG5D
+        KuqHYiet9T8HCLXCJpyEZSUA+2Y3JtBPlsTYhqguYnN1g25wW8VH53Y63Y2qjffEJMLZWE4Canu7O9iN
+        CcYJoqK+bI4RrPbng6Ti49+BiHYhN7HhpHjPZJl4VpaTgBMf1B1/wF0f6bjAPlCMeKszCcEZ6tdk4hd6
+        5GNyJ1ZC67o+kgkosuQExPXBCYmEadVlhcPROjg1Oqfid9ftF9DoKUV840kJRX1y0uqlchEFlpqASfcv
+        pThWFLrqaUnCHvB7bKpO4NSeHj0pKD5dGkBnX6WOT77rDqmIIktNAO2T9o0EP9PQpo5jt1IEW9ub6IQM
+        vI6/qm7Q2SZ/tGHKlM5PBRXtLggz/KDWud+/XiqiyFITcO511w8diQbVnYUuPU+Lto/nj+4Gjo7uvcIM
+        MdA+j2q2VMgcS0oA9jV1zjyTD4NY/3MY3gRdikCJ+kAUhY4E8I7aXv0fUjGZJSVgvU4/CLRcCCSqO+ka
+        FYfjPQRmaHVWQVCOppENo/Y+qZjMkhKAfWGXdM3nRlrViD7pN2vkz5Mw1t6CGGA/m3BCpgelYjJLSsCG
+        rgDvlu5JbBF9NkTaz2eT94AReaUoBt2cZ1PNZF0/oK5Xf0sqKFh0AuLdO8X1P0qebvapamzyHjABLzWL
+        0WF6JygE3GATlFl8AnTTy15xBFjuymkL2eQ9YDSa3xUh/GaMUBvvmS4VFSw6Ab1dpvcQ0fLT5DOiJdjk
+        PWAZuPeVYSA9J8SmIXR2jsZq6EWZsEUlIK6/VGN56Tf8nCb6RAl6hk2ewyiUA/HZoD2yn4dCyE6bsGCR
+        CfgR72YYLe3tBws+ad55m03egvErRUEIcAebTJiQWHkkjoL/WsUtlADahrbl3ZiA0vea6Jve4MUm76A+
+        0n6eKAKOht+wyQYIeqdV4MIJ6HZ8vARzze9F3w2K6r2HdVF754gioBQ8wCYbhn7E3f2GKHC+BKDt6+KP
+        sa0IRtT1Jt+tmsIm7wAdv9MkQoHXxYyPd0dFkQskIK+g8Heb6Bu8hU3eAUpOr0mEVrWNTY7A2fHKIhIg
+        ve8rgp7IFn3jaPw5m7wBejEfysDfRREaZnR8k83OwJIylwSHBKywLjtlQPLPFX0jlq342hsv7ht6QNfy
+        ujJwaqv6JW5SEHRyNXbp7W+OvufWPUT6jBJlXMQrBlPCs4+0+scctNnV7w6lS8/o6ELUetP7eQwq6ito
+        8kmOQHpZk/21CYr2BgZHmNu4B/SKeIywZ20dBvH9O6jB07npJwbjtqPDC0QwSNblfYtvtYHW+A4dfXR/
+        Xo833l+HGKSxKarj23erDsYRINz5wsh7uyGixWAaERMflR1MxP8RxN8diKrfYbM7gE7dYXQOI47+DwH+
+        esQAJeloxGi8UBDJWMJfuwf0PE6DokXxcSQv90bR+YinXuLqw4cPHz58+PCxH1BT838E4vOGXNxiQgAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
   <data name="MainForm.IconOptions.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIACqNQAAZgAAAICAAAABACAAKAgBABA2AABAQAAAAQAgAChCAAA4PgEAMDAAAAEA
